[#2375] Fix the position of the language picker on Firefox

--- a/ckan/public/base/less/footer.less
+++ b/ckan/public/base/less/footer.less
@@ -46,6 +46,17 @@
   text-indent: -900em;
 }
 
+.lang-select {
+  .clearfix;
+}
+
+.lang-select label,
+.lang-select select,
+.lang-select .lang-container {
+  float: left;
+  margin-top: 0;
+}
+
 .lang-dropdown {
   color: #000;
 }
@@ -162,5 +173,4 @@
   &[data-value*="/pt_BR/"]:before {
     background-position: 0 -132px;
   }
-
 }
